test/expected/cli/help_behavior.out
== help with no operand lists builtins:
echo
exit
cd
pwd
pushd
== help cd renders the cd builtin help:
DESCRIPTION
  The cd builtin changes the working directory.

== help nope is a located error:
shit: 1:6: error: Builtin `help`: 'nope' is not a shell builtin.
     1 |  help nope
       |       ^~~~ here.
shit: note: Run `help` with no operand to list every builtin.
rc=1
